# open-class-discord

./: .gitignore  Cargo.toml  README.md  x.json
constants/: Cargo.toml
constants/src/: commands.rs  find_class.rs  interaction.rs  lib.rs  schema.rs  types.rs
crates/d1/: Cargo.toml
crates/d1/src/: init.rs  insert.rs  lib.rs  query.rs  refresh.rs  types.rs
crates/discord/: Cargo.toml
crates/discord/src/: interactions.rs  lib.rs
crates/discord/src/commands/: find_class.rs  init.rs  mod.rs
crates/discord/src/embed/: builder.rs  mod.rs  types.rs
crates/portal/: Cargo.toml
crates/portal/src/: lib.rs  types.rs
register-commands/: Cargo.toml
register-commands/src/: main.rs
workers/: .dev.vars.example  .gitignore  Cargo.toml  schema.sql  wrangler.toml
workers/src/: embed.rs  find_class.rs  helpers.rs  lib.rs
workers/src/constants/: commands.rs
