[package]
name = "workers"
version = "0.1.0"
edition = "2021"
authors = [ "manas <66103885+manasbir@users.noreply.github.com>" ]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
name = "workers"
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]  # Register the command binary
name = "register-commands"
path = "src/bin/register-commands/src/main.rs"

[dependencies]
worker = { version="0.5.0", features=['http', 'axum'] }
worker-macros = { version="0.5.0", features=['http'] }
axum  = { version = "0.7", default-features = false }
tower-service = "0.3.2"
console_error_panic_hook = { version = "0.1.1" }
dotenv = "0.15.0"
anyhow = "1.0.95"
serde = "1.0.217"
serde_json = "1.0.138"
