[package]
name = "workers"
version = "0.1.0"
edition = "2021"
authors = [ "manas <66103885+manasbir@users.noreply.github.com>" ]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
discord = { path = "../crates/discord" }
portal = { path = "../crates/portal" }
d1 = { path = "../crates/d1" }
worker = { version="0.5.0", features=['http', 'd1'] }
worker-macros = { version="0.5.0", features=['http'] }
tower-service = "0.3.2"
console_error_panic_hook = { version = "0.1.1" }
serde_json = "1.0.138"
ed25519-dalek = "2.1.1"
hex = "0.4.3"
anyhow = "1.0.95"
reqwest = { version = "0.12.12", features = ["json"] }
serde = "1.0.217"
chrono = "0.4.39"

