[package]
name = "discord"
version = "0.1.0"
edition = "2021"

[dependencies]
d1 = { path = "../d1" }
serde = "1.0.217"
hex = "0.4.3"
anyhow = "1.0.95"
reqwest = { version = "0.12.12", features = ["json"] }
chrono = "0.4.39"
worker = { version="0.5.0", features=['http', 'd1'] }
serde_json = "1.0.138"
ed25519-dalek = "2.1.1"
chrono-tz = "0.10.1"
